apps/suwayomi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suwayomi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suwayomi
  template:
    metadata:
      labels:
        app: suwayomi
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: suwayomi-data-claim
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: app
        image: ghcr.io/suwayomi/suwayomi-server:preview@sha256:9397e89561c3d0d05bd8657b89808bb306f4a228ca3d055b81c471cee834af41
        volumeMounts:
        - name: data
          mountPath: /home/suwayomi/.local/share/Tachidesk
        ports:
        - containerPort: 4567
      - name: ereadifier
        image: ghcr.io/rjgraffham/ereadifier:latest@sha256:76ad5d9eafad84f3356c1fb6e8b50a29fa2cdaf15c2d47cbdba99c96ef33e610
