apps/suwayomi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suwayomi-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: suwayomi
  ports:
  - port: 80
    targetPort: 4567
