apps/suwayomi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suwayomi
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - yomi.psquid.net
    secretName: psquid-net-tls
  rules:
  - host: yomi.psquid.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: suwayomi-web
            port:
              number: 80
